# ups-cloud

./: .dockerignore  .gitignore  LICENSE  README  README.md  app.py  config.ini  dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt
static/: chart.js
templates/: dashboard.html
